added footer - experimental and may remove

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
     background-color:black;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    min-height: 100%
 }
 
 nav {
@@ -87,4 +88,8 @@ nav {
 
 .all {
     text-align: center;
+}
+
+h5 {
+    margin: 10px 0;
 }
