--- a/interests.css
+++ b/interests.css
@@ -31,6 +31,7 @@ body {
     background-color:black;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    min-height: 100%
 }
 
 nav {
@@ -75,4 +76,8 @@ img {
     font-weight: bold;
     margin-bottom: -10px;
     text-align: center
+}
+
+h5 {
+    margin: 10px 0;
 }
