--- a/achievements.css
+++ b/achievements.css
@@ -30,6 +30,7 @@ body {
     background-color:black;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    min-height: 100%
 }
 
 nav {
@@ -63,4 +64,8 @@ img {
 
 li {
     list-style-type: square
+}
+
+h5 {
+    margin: 10px 0;
 }
