--- a/skills.css
+++ b/skills.css
@@ -22,6 +22,7 @@ body {
     background-color:black;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    min-height: 100%
 }
 
 nav {
@@ -52,7 +53,7 @@ li {
 }
 
 .skills {
-    padding: 30px 50px 30px 50px;
+    padding: 30px 50px 80px 50px;
     font-size: 19px;
     column-count: 2;
 }
@@ -68,4 +69,8 @@ li {
 p {
     padding: 1px;
     margin: 6px
+}
+
+h5 {
+    margin: 10px 0;
 }
