--- a/volunteering.css
+++ b/volunteering.css
@@ -26,6 +26,7 @@ body {
     background-color:black;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    min-height: 100%
 }
 
 nav {
@@ -59,4 +60,8 @@ img {
 
 li {
     list-style-type: square
+}
+
+h5 {
+    margin: 10px 0;
 }
