--- a/skills.css
+++ b/skills.css
@@ -1,71 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration-style: none;
-    text-decoration: none;
-    color: white
+  text-decoration-style: none;
+  text-decoration: none;
+  color: white;
 }
 
 a:hover {
-    color: #7A7979
+  color: #7a7979;
 }
 
-
 body {
-    background-color:black;
-    font-family: 'Montserrat', sans-serif;
-    color: white;
+  background-color: black;
+  font-family: "Montserrat", sans-serif;
+  color: white;
 }
 
 nav {
-    width: 100%;
-    font-size: 20px;
-    text-align: center;
-    border-bottom: 1px solid white;
-    list-style-type: none;
-    display: inline-block;
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+  border-bottom: 1px solid white;
+  list-style-type: none;
+  display: inline-block;
 }
 
 .navpages {
-    list-style-type: none;
-    display: inline;
-    float:right;
-    padding: 10px 20px 10px 20px;
+  list-style-type: none;
+  display: inline;
+  float: right;
+  padding: 10px 20px 10px 20px;
 }
 
 .logo {
-    float: left;
-    font-weight: 800;
-    font-size: 21px
+  float: left;
+  font-weight: 800;
+  font-size: 21px;
 }
 
-
 li {
-    list-style-type: square
+  list-style-type: square;
 }
 
 .skills {
-    padding: 30px 50px 30px 50px;
-    font-size: 19px;
-    column-count: 2;
+  padding: 20px 50px 30px 50px;
+  font-size: 19px;
+  column-count: 2;
 }
 
 .skills .col-1 {
-   break-inside: avoid;
-   break-inside: avoid-column;
-   display: inline-grid;
-   page-break-inside: avoid;
+  break-inside: avoid;
+  break-inside: avoid-column;
+  display: inline-grid;
+  page-break-inside: avoid;
 }
 
-
 p {
-    padding: 1px;
-    margin: 6px
+  padding: 1px;
+  margin: 6px;
+}
+
+h5 {
+  margin: 10px 0;
+  font-size: 13px;
+  text-align: center;
 }
